infra/k8s/employee-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
        - name: employee
          image: ahbavand/employee
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  selector:
    app: employee
  ports:
    - name: employee
      protocol: TCP
      port: 3000
      targetPort: 3000
