infra/k8s/mongo-authentication-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-authentication-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-authentication
  template:
    metadata:
      labels:
        app: mongo-authentication
    spec:
      volumes:
        - name: auth-storage
          persistentVolumeClaim:
            claimName: auth-database-pvc
      containers:
        - name: mongo-authentication
          image: mongo
          volumeMounts:
            - name: auth-storage
              mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-authentication-service
spec:
  selector:
    app: mongo-authentication
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
