infra/k8s/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis-deployment
  template:
    metadata:
      labels:
        component: redis-deployment
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-depl-service
spec:
  selector:
    app: redis-deployment
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
